# serializer version: 1
# name: test_select_entities_state[select.bedroom_valve_ventilation_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'auto',
        'man1',
        'man2',
        'man3',
        'cnt1',
        'cnt2',
        'cnt3',
        'empt',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.bedroom_valve_ventilation_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ventilation mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ventilation mode',
    'platform': 'duco',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ventilation_mode',
    'unique_id': 'aa:bb:cc:dd:ee:ff_60_ventilation_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_state[select.bedroom_valve_ventilation_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bedroom Valve Ventilation mode',
      'options': list([
        'auto',
        'man1',
        'man2',
        'man3',
        'cnt1',
        'cnt2',
        'cnt3',
        'empt',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.bedroom_valve_ventilation_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'man2',
  })
# ---
# name: test_select_entities_state[select.office_extract_valve_ventilation_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'auto',
        'man1',
        'man2',
        'man3',
        'cnt1',
        'cnt2',
        'cnt3',
        'empt',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': None,
    'entity_id': 'select.office_extract_valve_ventilation_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Ventilation mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Ventilation mode',
    'platform': 'duco',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'ventilation_mode',
    'unique_id': 'aa:bb:cc:dd:ee:ff_61_ventilation_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_select_entities_state[select.office_extract_valve_ventilation_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Office Extract Valve Ventilation mode',
      'options': list([
        'auto',
        'man1',
        'man2',
        'man3',
        'cnt1',
        'cnt2',
        'cnt3',
        'empt',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.office_extract_valve_ventilation_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'auto',
  })
# ---
